--- a/nosotros.html
+++ b/nosotros.html
@@ -49,9 +49,15 @@
                         <div class="dropdown-menu" aria-labelledby="dropdown01">
                             <a class="dropdown-item" href="erp.html">ERP</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="parking.html">Parking</a>
+                            <a class="dropdown-item" href="parking.html">Parking y control de acceso</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="efactura.html">Factura electrónica</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="cobranzas.html">Cobranzas</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="ecommerce.html">E-Commerce</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="contacto.html">Desarrollos a Medida</a>
                         </div>
                     </li>
                     <li class="nav-item">
