--- a/nosotros.html
+++ b/nosotros.html
@@ -116,6 +116,7 @@
         <div class="row ">
             <div class="col-lg-6 ">
                 <div class="card-image">
+                    <h2><span id="clientes"> &nbsp; </span></h2>
                     <img class="img-fluid" src="images/Mission.png" alt="Mission" height="150px" width="150px">
                 </div>
                 <h2 class="h2-heading ">MISIÓN</h2>
@@ -125,6 +126,7 @@
             <!-- end of col -->
             <div class="col-lg-6 ">
                 <div class="card-image">
+                    <h2><span id="clientes"> &nbsp; </span></h2>
                     <img class="img-fluid" src="images/Vision.png" alt="Vision" height="150px" width="150px">
                 </div>
                 <h2 class="h2-heading ">VISIÓN</h2>
@@ -143,7 +145,7 @@
     <div class="container solutions-sections" id="principios">
         <div class="row">
             <div class="col-lg-12">
-                <h2 class="h2-heading">PRINCIPIOS</h2>
+                <h2 class="h2-heading"><span id="clientes"> &nbsp; </span>PRINCIPIOS</h2>
                 <hr>
                 <ul class="list-unstyled li-space-lg">
                     <li class="media">
