--- a/nosotros.html
+++ b/nosotros.html
@@ -112,30 +112,32 @@
     <!-- end of history -->
 
     <!-- Misión & Visión -->
-    <div class="container bg-gray solutions-sections" id="misionvision">
-        <div class="row ">
-            <div class="col-lg-6 ">
-                <div class="card-image">
-                    <h2><span id="clientes"> &nbsp; </span></h2>
-                    <img class="img-fluid" src="images/Mission.png" alt="Mission" height="150px" width="150px">
+    <div class="bg-gray solutions-sections" id="misionvision">
+        <div class="container">
+            <div class="row ">
+                <div class="col-lg-6 ">
+                    <div class="card-image">
+                        <h2><span id="clientes"> &nbsp; </span></h2>
+                        <img class="img-fluid" src="images/Mission.png" alt="Mission" height="150px" width="150px">
+                    </div>
+                    <h2 class="h2-heading ">MISIÓN</h2>
+                    <br>
+                    <p>Proteger la inversión de nuestros clientes, extendiendo las soluciones que brindamos con nuevas funcionalidades y tecnologías.</p>
                 </div>
-                <h2 class="h2-heading ">MISIÓN</h2>
-                <br>
-                <p>Proteger la inversión de nuestros clientes, extendiendo las soluciones que brindamos con nuevas funcionalidades y tecnologías.</p>
-            </div>
-            <!-- end of col -->
-            <div class="col-lg-6 ">
-                <div class="card-image">
-                    <h2><span id="clientes"> &nbsp; </span></h2>
-                    <img class="img-fluid" src="images/Vision.png" alt="Vision" height="150px" width="150px">
+                <!-- end of col -->
+                <div class="col-lg-6 ">
+                    <div class="card-image">
+                        <h2><span id="clientes"> &nbsp; </span></h2>
+                        <img class="img-fluid" src="images/Vision.png" alt="Vision" height="150px" width="150px">
+                    </div>
+                    <h2 class="h2-heading ">VISIÓN</h2>
+                    <br>
+                    <p>Ser el proveedor de software elegido por las empresas por ser el que más valor les aporta en la optimización de su gestión estratégica.</p>
                 </div>
-                <h2 class="h2-heading ">VISIÓN</h2>
-                <br>
-                <p>Ser el proveedor de software elegido por las empresas por ser el que más valor les aporta en la optimización de su gestión estratégica.</p>
+                <!-- end of col -->
             </div>
-            <!-- end of col -->
+            <!-- end of row -->
         </div>
-        <!-- end of row -->
     </div>
     <!-- end of container -->
     <!-- end of Misión & Visión -->
