--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                         </div>
                         <div class="card-body">
                             <h5 class="card-title">Parking y control de acceso</h5>
-                            <p>Automatización y gestión de estacionamientos de avanzada.</p><br/>
+                            <p>Automatización y gestión de estacionamientos.</p><br/>
                             <a class="btn-solid-reg" href="parking.html">Más</a>
                         </div>
                     </div>
