--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                         </div>
                         <div class="card-body">
                             <h5 class="card-title">ERP</h5>
-                            <p>El software de gestión más flexible del mercado.</p><br/>
+                            <!--<p>El software de gestión más flexible del mercado.</p>--><br/>
                             <a class="btn-solid-reg" href="erp.html">Más</a>
                         </div>
                     </div>
@@ -152,11 +152,18 @@
                         </div>
                         <div class="card-body">
                             <h5 class="card-title">Parking y control de acceso</h5>
-                            <p>Automatización y gestión de estacionamientos.</p><br/>
+                            <!--<p>Automatización y gestión de estacionamientos.</p>--><br/>
                             <a class="btn-solid-reg" href="parking.html">Más</a>
                         </div>
                     </div>
                     <!-- end of card -->
+
+                </div>
+                <!-- end of col -->
+            </div>
+            <!-- end of row -->
+            <div class="row">
+                <div class="col-lg-12">
 
                     <!-- Card -->
                     <div class="card">
@@ -165,8 +172,21 @@
                         </div>
                         <div class="card-body">
                             <h5 class="card-title">Facturación</h5>
-                            <p>Simplifique su proceso de facturación.</p><br/>
+                            <!--<p>Simplifique su proceso de facturación.</p>--><br/>
                             <a class="btn-solid-reg" href="efactura.html">Más</a>
+                        </div>
+                    </div>
+                    <!-- end of card -->
+
+                    <!-- Card -->
+                    <div class="card">
+                        <div class="card-image">
+                            <img class="img-fluid" src="images/services-icon-2.png" alt="Parking">
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">Parking y control de acceso</h5>
+                            <!--<p>Automatización y gestión de estacionamientos.</p>--><br/>
+                            <a class="btn-solid-reg" href="parking.html">Más</a>
                         </div>
                     </div>
                     <!-- end of card -->
