--- a/parking.html
+++ b/parking.html
@@ -330,6 +330,59 @@
                     </li>
                 </ul>
             </div>
+            <div class="col-lg-12">
+                <br>
+                <p>Si decide incorporar nuestro <a href="https://addsa.com.ar/estacionamiento-guiado.html">sistema de estacionamiento guiado</a>, que permite una identificación altamente fiable de cada vehículo a través de reconocimiento de matrícula, podrá
+                    además:</p>
+            </div>
+            <div class="col-lg-6">
+                <ul class="list-unstyled li-space-lg">
+                    <li class="media">
+                        <i class="fas">&bullet;</i>
+                        <div class="media-body">Ofrecer <b>reserva en línea</b> de la plaza de aparcamiento a través de la matrícula.</div>
+                    </li>
+                    <li class="media">
+                        <i class="fas">&bullet;</i>
+                        <div class="media-body"><b>Entrada y salida automática</b> para clientes abonados.</div>
+                    </li>
+                    <li class="media">
+                        <i class="fas">&bullet;</i>
+                        <div class="media-body">Detectar intercambio de tickets y buscar <b>tickets perdidos</b>.</div>
+                    </li>
+                    <li class="media">
+                        <i class="fas">&bullet;</i>
+                        <div class="media-body"><b>Prevenir</b> el acceso fraudulento y crear listas blancas y negras.</div>
+                    </li>
+                    <li class="media">
+                        <i class="fas">&bullet;</i>
+                        <div class="media-body">Detectar <b>incidentes</b> y mejorar el control mediante <b>alarmas</b>.</div>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-lg-6">
+                <ul class="list-unstyled li-space-lg">
+                    <li class="media">
+                        <i class="fas">&bullet;</i>
+                        <div class="media-body">Tener <b>control</b> de todos los eventos y movimientos de entrada / salida.</div>
+                    </li>
+                    <li class="media">
+                        <i class="fas">&bullet;</i>
+                        <div class="media-body"><b>Prevenir robos</b> de vehículos y reclamaciones.</div>
+                    </li>
+                    <li class="media">
+                        <i class="fas">&bullet;</i>
+                        <div class="media-body"><b>Mejorar</b> la gestión del aparcamiento y la <b>experiencia del usuario</b>.</div>
+                    </li>
+                    <li class="media">
+                        <i class="fas">&bullet;</i>
+                        <div class="media-body">Múltiples filtros para buscar información del vehículo (por matrícula, número de ticket, etc.).</div>
+                    </li>
+                    <li class="media">
+                        <i class="fas">&bullet;</i>
+                        <div class="media-body">Obtener <b>estadísticas de uso</b> e información de marketing.</div>
+                    </li>
+                </ul>
+            </div>
             <!-- end of col -->
             <div class="col-lg-12">
                 <br>
