--- a/index.html
+++ b/index.html
@@ -181,12 +181,45 @@
                     <!-- Card -->
                     <div class="card">
                         <div class="card-image">
-                            <img class="img-fluid" src="images/services-icon-2.png" alt="Parking">
+                            <img class="img-fluid" src="images/services-icon-2.png" alt="Cobranzas">
                         </div>
                         <div class="card-body">
-                            <h5 class="card-title">Parking y control de acceso</h5>
+                            <h5 class="card-title">Cobranzas</h5>
                             <!--<p>Automatización y gestión de estacionamientos.</p>--><br/>
-                            <a class="btn-solid-reg" href="parking.html">Más</a>
+                            <a class="btn-solid-reg" href="cobranzas.html">Más</a>
+                        </div>
+                    </div>
+                    <!-- end of card -->
+
+                </div>
+                <!-- end of col -->
+            </div>
+            <!-- end of row -->
+            <div class="row">
+                <div class="col-lg-12">
+
+                    <!-- Card -->
+                    <div class="card">
+                        <div class="card-image">
+                            <img class="img-fluid" src="images/services-icon-3.png" alt="Ecommerce">
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">E-Commerce</h5>
+                            <!--<p>Simplifique su proceso de facturación.</p>--><br/>
+                            <a class="btn-solid-reg" href="ecommerce.html">Más</a>
+                        </div>
+                    </div>
+                    <!-- end of card -->
+
+                    <!-- Card -->
+                    <div class="card">
+                        <div class="card-image">
+                            <img class="img-fluid" src="images/services-icon-2.png" alt="Medida">
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">Desarollos a medida</h5>
+                            <!--<p>Automatización y gestión de estacionamientos.</p>--><br/>
+                            <a class="btn-solid-reg" href="contacto.html">Más</a>
                         </div>
                     </div>
                     <!-- end of card -->
