--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                     <div class="card">
                         <div class="card-image">
                             <br />
-                            <img class="img-fluid" src="images/services-icon-1.png" alt="ERP">
+                            <img src="images/services-icon-1.png" alt="ERP">
                         </div>
                         <div class="card-body">
                             <h5 class="card-title">ERP</h5>
@@ -148,7 +148,7 @@
                     <!-- Card -->
                     <div class="card">
                         <div class="card-image">
-                            <img class="img-fluid" src="images/services-icon-2.png" alt="Parking">
+                            <imgs src="images/services-icon-2.png" alt="Parking">
                         </div>
                         <div class="card-body">
                             <h5 class="card-title">Parking y control de acceso</h5>
