--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                     <!-- Card -->
                     <div class="card">
                         <div class="card-image">
-                            <imgs src="images/services-icon-2.png" alt="Parking">
+                            <img src="images/services-icon-2.png" alt="Parking">
                         </div>
                         <div class="card-body">
                             <h5 class="card-title">Parking y control de acceso</h5>
