--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     <!-- Card -->
                     <div class="card">
                         <div class="card-image">
-                            <img src="images/services-icon-1.png" alt="ERP">
+                            <img class="img-fluid" src="images/services-icon-1.png" alt="ERP">
                         </div>
                         <div class="card-body">
                             <h5 class="card-title">ERP</h5>
@@ -147,7 +147,7 @@
                     <!-- Card -->
                     <div class="card">
                         <div class="card-image">
-                            <img src="images/services-icon-2.png" alt="Parking">
+                            <img class="img-fluid" src="images/services-icon-2.png" alt="Parking">
                         </div>
                         <div class="card-body">
                             <h5 class="card-title">Parking y control de acceso</h5>
