--- a/efactura.html
+++ b/efactura.html
@@ -95,14 +95,7 @@
             <div class="col-lg-12">
                 <h1>¿Qué es la factura electrónica?</h1>
                 <hr>
-                <p>Desde hace varios años la factura electrónica optimiza las prácticas de facturación de las empresas que prestan distintos tipos de servicios.</p>
-                <p>Tanto las facturas electrónicas como las de papel se ven afectadas por los mismos requisitos legales e impositivos respecto a su contenido.</p>
-                <p>La factura electrónica se diferencia de la factura en papel por la manera en que se gestiona, valida y envía.</p>
-                <p>Se gestiona a través de equipos informáticos. Se valida electrónicamente vía internet. Se pone a disposición mediante un sistema digital, por el cual el vendedor podrá enviar electrónicamente al comprador el documento que respalda la venta
-                    o la provisión del servicio.</p>
-                <p>Todo este conjunto de actividades permite garantizar la autenticidad y la integridad del documento electrónico.</p>
-                <p>ADD+ dispone de un módulo de autorización y registración de Factura Electrónica el cual trabaja en forma independiente o integrada.</p>
-                <p>La factura electrónica no es solo una herramienta de control fiscal que facilita el procesamiento a los fines impositivos, sino que contribuye a un ahorro importante en los costos de las empresas que utilizan este sistema:</p>
+                <p>La factura electrónica se diferencia de la factura en papel por la manera en que se gestiona, valida y envía:</p>
                 <br>
             </div>
             <div class="col-lg-4">
@@ -154,7 +147,11 @@
                 </ul>
             </div>
             <div class="col-lg-12">
-                <h1>¿Por qué elegirnos para emitir factura electrónica?</h1>
+                <p>Todo este conjunto de actividades permite garantizar la autenticidad y la integridad del documento electrónico, además de representar una importante <a href="">reducción de costos</a>.</p>
+                <br>
+            </div>
+            <div class="col-lg-12">
+                <h1>11 razones para elegir KwARP-ERP para hacer sus facturas electrónicas</h1>
                 <hr>
                 <p><b>Confidencialidad:</b> Usted mismo hace su factura electrónica.</p>
                 <p><b>Experiencia:</b> 30 años ininterrumpidos en el mercado.</p>
