Cobranzas to Contact Form

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="efactura.html">Factura electrónica</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="cobranzas.html">Cobranzas</a>
+                            <a class="dropdown-item" href="contacto.html">Cobranzas</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="ecommerce.html">E-Commerce</a>
                             <div class="dropdown-divider"></div>
@@ -185,7 +185,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Cobranzas</h5>
                             <!--<p>Automatización y gestión de estacionamientos.</p>--><br/>
-                            <a class="btn-solid-reg" href="cobranzas.html">Más</a>
+                            <a class="btn-solid-reg" href="contacto.html">Más</a>
                         </div>
                     </div>
                     <!-- end of card -->
