--- a/nosotros.html
+++ b/nosotros.html
@@ -53,7 +53,7 @@
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="efactura.html">Factura electrónica</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="cobranzas.html">Cobranzas</a>
+                            <a class="dropdown-item" href="contacto.html">Cobranzas</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="ecommerce.html">E-Commerce</a>
                             <div class="dropdown-divider"></div>
