--- a/parking.html
+++ b/parking.html
@@ -53,7 +53,7 @@
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="efactura.html">Factura electrónica</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="cobranzas.html">Cobranzas</a>
+                            <a class="dropdown-item" href="contacto.html">Cobranzas</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="ecommerce.html">E-Commerce</a>
                             <div class="dropdown-divider"></div>
@@ -333,7 +333,8 @@
             <div class="col-lg-12">
                 <br>
                 <p>Si decide incorporar nuestro <a href="https://addsa.com.ar/estacionamiento-guiado.html">sistema de estacionamiento guiado</a>, que permite una identificación altamente fiable de cada vehículo a través de reconocimiento de matrícula, podrá
-                    además:</p>
+                    además:
+                </p>
             </div>
             <div class="col-lg-6">
                 <ul class="list-unstyled li-space-lg">
