--- a/nosotros.html
+++ b/nosotros.html
@@ -61,6 +61,9 @@
                         </div>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link page-scroll" href="parking.html#services">Productos</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link page-scroll" href="index.html#clientes">Clientes</a>
                     </li>
                     <li class="nav-item dropdown">
