--- a/efactura.html
+++ b/efactura.html
@@ -93,7 +93,7 @@
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="efactura.html">Factura electrónica</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="contacto.html">Cobranzas</a>
+                            <a class="dropdown-item" href="cobranzas.html">Cobranzas</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="ecommerce.html">E-Commerce</a>
                             <div class="dropdown-divider"></div>
@@ -131,79 +131,48 @@
     <div class="container solutions-sections">
         <div class="row">
             <div class="col-lg-12">
-                <h1>¿Qué es la factura electrónica?</h1>
+                <h1>¿Para qué usar Facturación de KwARP-ERP?</h1>
                 <hr>
-                <p>La factura electrónica se diferencia de la factura en papel por la manera en que se gestiona, valida y envía:</p>
+                <p>Utilice nuestra solución para:</p>
                 <br>
-            </div>
-            <div class="col-lg-4">
                 <ul class="list-unstyled li-space-lg">
                     <li class="media">
                         <i class="fas">&bullet;</i>
-                        <div class="media-body">Ahorro de la impresión en papel (100% de ahorro)</div>
+                        <div class="media-body">Emitir <a class="popup-with-move-anim" href="#efactura-lightbox">facturas electrónicas</a> desde cualquier dispositivo conectado en red de un modo muy sencillo, seguro y eficiente, con una importante <a class="popup-with-move-anim"
+                                href="#reduccioncostos-lightbox">reducción de costos</a>.</div>
                     </li>
                     <li class="media">
                         <i class="fas">&bullet;</i>
-                        <div class="media-body">Disminución en los costos de distribución de facturas (95% de ahorro)</div>
+                        <div class="media-body">Emitir facturas a través de impresora fiscal si desea mantenerla, o ayudarlo a migrar de la impresora fiscal a <a class="popup-with-move-anim" href="#efactura-lightbox">facturación electrónica</a>.</div>
                     </li>
                     <li class="media">
                         <i class="fas">&bullet;</i>
-                        <div class="media-body">Disminución en las horas hombres debido a la automatización de los procesos de facturación y en las tareas de imputación de operaciones (90% de ahorro)</div>
+                        <div class="media-body">Integrar el software administrativo, punto de venta o sistema de facturación que ya posee con facturación electrónica, a través de diferentes opciones de <a class="popup-with-move-anim" href="#facturacioncorp-lightbox">facturación corporativa</a>.</div>
+                    </li>
+                    <li class="media">
+                        <i class="fas">&bullet;</i>
+                        <div class="media-body">Generar, en una única operación, un conjunto de facturas en forma automática con la opción de <a class="popup-with-move-anim" href="#facturacionlote-lightbox">facturación por lote</a>. Ideal para empresas que cobran abonos, como
+                            prestadoras de servicios de internet, abogados, contadores, consultoras, instituciones educativas y deportivas, etc.</div>
                     </li>
                 </ul>
             </div>
-            <div class="col-lg-4">
-                <ul class="list-unstyled li-space-lg">
-                    <li class="media">
-                        <i class="fas">&bullet;</i>
-                        <div class="media-body">Mayor seguridad en el resguardo de los documentos (95% de ahorro)</div>
-                    </li>
-                    <li class="media">
-                        <i class="fas">&bullet;</i>
-                        <div class="media-body">Facilidad en los procesos de auditoría (90% de ahorro)</div>
-                    </li>
-                    <li class="media">
-                        <i class="fas">&bullet;</i>
-                        <div class="media-body">Oportunidad en la información, tanto en la recepción como en el envío (80% de ahorro)</div>
-                    </li>
-                </ul>
-            </div>
-            <div class="col-lg-4">
-                <ul class="list-unstyled li-space-lg">
-                    <li class="media">
-                        <i class="fas">&bullet;</i>
-                        <div class="media-body">Menor probabilidad de falsificación (100% de ahorro)</div>
-                    </li>
-                    <li class="media">
-                        <i class="fas">&bullet;</i>
-                        <div class="media-body">Agilidad en la localización de información (95% de ahorro)</div>
-                    </li>
-                    <li class="media">
-                        <i class="fas">&bullet;</i>
-                        <div class="media-body">Eliminación de espacios para almacenar documentos históricos (99% de ahorro)</div>
-                    </li>
-                </ul>
-            </div>
+
             <div class="col-lg-12">
-                <p>Todo este conjunto de actividades permite garantizar la autenticidad y la integridad del documento electrónico, además de representar una importante <a href="">reducción de costos</a>.</p>
-                <br>
-            </div>
-            <div class="col-lg-12">
-                <h1>11 razones para elegir KwARP-ERP para hacer sus facturas electrónicas</h1>
+                <h1>10 razones para elegir KwARP-ERP para hacer sus facturas electrónicas</h1>
                 <hr>
                 <p><b>Confidencialidad:</b> Usted mismo hace su factura electrónica.</p>
                 <p><b>Experiencia:</b> 30 años ininterrumpidos en el mercado.</p>
-                <p><b>Portabilidad:</b> Uso via Web o instalado en su PC.</p>
                 <p><b>Respaldo:</b> Empresa 100% Argentina con una solución 100% Argentina.</p>
-                <p><b>Idoneidad:</b> El ejecutivo de cuentas asignado es Contador Público Nacional.</p>
-                <p><b>Teconlogía:</b> Desarrollado con Microsoft .Net C#.</p>
-                <p><b>Robustez:</b> Motor de base de datos Microsoft SQL.</p>
-                <p>Servicio:<b></b> WEB mejor posicionada por GOOGLE.</p>
-                <p><b>Integración:</b> Factura electrónica + registración electrónica + duplicado electrónico.</p>
-                <p><b>Precio:</b> La solución más económica del mercado.</p>
-                <p><b>Puesta a disposicion:</b> eMail, Web, PDF, XML.</p>
+                <p><b>Puesta a disposicion:</b> eMail, Web, PDF, XML y publicación en <a href="https://mifactura.com.ar/" target="_blank">mifactura.com.ar</a> para que tus clientes la puedan bajar ellos mismos.</p>
+                <p><b>Actualizaciones:</b> Periódicas de acuerdo a normativas vigentes <i>sin costo adicional</i>.</p>
+                <p><b>Múltiples medios de cobro:</b> Tarjetas de crédito y débito, pagos web y ATM (Pago Fácil, RapiPago, Pago Mis Cuentas, Mercado Pago, Dinero Mail), débito automático, por cbu.</p>
+                <p><b>Facturación por lote (recurrente):</b> ¡<a class="popup-with-move-anim" href="#facturacionlote-lightbox">Automatice</a> su proceso de facturación!</p>
+                <p><b>Multiempresa y multimoneda:</b> Permite trabajar con más de una compañía y más de una moneda.</p>
+                <p><b>Integración:</b> Nuestro módulo de autorización y registración de Factura Electrónica puede trabajar en forma independiente o integrada, tanto con nuestra solución <a href="erp.html">KwARP-ERP</a> como <i>con cualquier software de gestión que <a class="popup-with-move-anim" href="#facturacioncorp-lightbox">usted ya esté utilizando</a></i>.</p>
+                <p><b>Datos en tiempo real:</b> Importe información desde una variedad de fuentes para luego utilizarlas en la facturación, como ser detectores de vehículos o personas, molinetes, sistemas de radio frecuencia (RFID, TAGs), sistemas biométricos,
+                    códigos de barras, video, audio, etc. Emita la factura y regístrela en un solo paso.</p>
                 <br>
-                <h1>Características</h1>
+                <h1>¿Qué incluye el módulo de facturación electrónica de KwARP-ERP?</h1>
                 <hr>
             </div>
             <div class="col-lg-4">
@@ -222,7 +191,19 @@
                     </li>
                     <li class="media">
                         <i class="fas">&bullet;</i>
-                        <div class="media-body">Factura electrónica de venta</div>
+                        <div class="media-body">Módulo de Ofertas Programable (3×2 / 4×3)</div>
+                    </li>
+                    <li class="media">
+                        <i class="fas">&bullet;</i>
+                        <div class="media-body">Venta de productos en “combos” parametrizables</div>
+                    </li>
+                    <li class="media">
+                        <i class="fas">&bullet;</i>
+                        <div class="media-body">Actualización de Precios por Marca, por Rubro, por SubRubro, por Grupos, CSV, de Precios (Público y Costo)</div>
+                    </li>
+                    <li class="media">
+                        <i class="fas">&bullet;</i>
+                        <div class="media-body">Factura electronica de venta</div>
                     </li>
                     <li class="media">
                         <i class="fas">&bullet;</i>
@@ -230,15 +211,7 @@
                     </li>
                     <li class="media">
                         <i class="fas">&bullet;</i>
-                        <div class="media-body">Gestión CAE por web services AFIP</div>
-                    </li>
-                    <li class="media">
-                        <i class="fas">&bullet;</i>
-                        <div class="media-body">Impresión de factura</div>
-                    </li>
-                    <li class="media">
-                        <i class="fas">&bullet;</i>
-                        <div class="media-body">Envio automatizado por email</div>
+                        <div class="media-body">Gestion CAE por web services AFIP</div>
                     </li>
                 </ul>
             </div>
@@ -246,11 +219,19 @@
                 <ul class="list-unstyled li-space-lg">
                     <li class="media">
                         <i class="fas">&bullet;</i>
-                        <div class="media-body">Generación de factura en PDF</div>
+                        <div class="media-body">Impresión de factura</div>
                     </li>
                     <li class="media">
                         <i class="fas">&bullet;</i>
-                        <div class="media-body">Generación de factura en XML</div>
+                        <div class="media-body">Envío automatizado por email</div>
+                    </li>
+                    <li class="media">
+                        <i class="fas">&bullet;</i>
+                        <div class="media-body">Generación de factura en pdf</div>
+                    </li>
+                    <li class="media">
+                        <i class="fas">&bullet;</i>
+                        <div class="media-body">Generación de factura en xml</div>
                     </li>
                     <li class="media">
                         <i class="fas">&bullet;</i>
@@ -258,23 +239,24 @@
                     </li>
                     <li class="media">
                         <i class="fas">&bullet;</i>
-                        <div class="media-body">Registración electrónica de las ventas RG 1361 (obligatorio)</div>
+                        <div class="media-body">Libro IVA ventas digital</div>
                     </li>
                     <li class="media">
                         <i class="fas">&bullet;</i>
-                        <div class="media-body">Libro IVA ventas</div>
+                        <div class="media-body">Facturación con Teclado o Lector de Código de Barras</div>
                     </li>
                     <li class="media">
                         <i class="fas">&bullet;</i>
-                        <div class="media-body">Cobranzas</div>
+                        <div class="media-body">Integración con Balanzas electrónicas, Colectores y Verificadores de Precios</div>
                     </li>
+                    <li class="media">
+                        <i class="fas">&bullet;</i>
+                        <div class="media-body">Posibilidad de Generar Remitos, Pedidos y Facturas desde tu celular</div>
+                    </li>
+
                     <li class="media">
                         <i class="fas">&bullet;</i>
                         <div class="media-body">Cuenta corriente de clientes</div>
-                    </li>
-                    <li class="media">
-                        <i class="fas">&bullet;</i>
-                        <div class="media-body">Factura de compra</div>
                     </li>
                 </ul>
             </div>
@@ -282,15 +264,19 @@
                 <ul class="list-unstyled li-space-lg">
                     <li class="media">
                         <i class="fas">&bullet;</i>
+                        <div class="media-body">Módulo de Gestión de Cobranzas y/o Deudores</div>
+                    </li>
+                    <li class="media">
+                        <i class="fas">&bullet;</i>
+                        <div class="media-body">Factura de compra</div>
+                    </li>
+                    <li class="media">
+                        <i class="fas">&bullet;</i>
                         <div class="media-body">Pagos</div>
                     </li>
                     <li class="media">
                         <i class="fas">&bullet;</i>
                         <div class="media-body">Cuenta corriente de proveedores</div>
-                    </li>
-                    <li class="media">
-                        <i class="fas">&bullet;</i>
-                        <div class="media-body">Registración electrónica de las compras RG 1361 (obligatorio)</div>
                     </li>
                     <li class="media">
                         <i class="fas">&bullet;</i>
@@ -304,11 +290,31 @@
                         <i class="fas">&bullet;</i>
                         <div class="media-body">Libro caja y bancos</div>
                     </li>
+                    <li class="media">
+                        <i class="fas">&bullet;</i>
+                        <div class="media-body">Estadística de Stock en Sucursales Valorizadas</div>
+                    </li>
+                    <li class="media">
+                        <i class="fas">&bullet;</i>
+                        <div class="media-body">Informes de Ventas</div>
+                    </li>
                 </ul>
             </div>
             <div class="col-lg-12">
                 <br>
-                <h1>Servicios adicionales</h1>
+                <h3>Unificación</h3>
+                <p>Generación de una única factura para todos los servicios.</p>
+                <br>
+                <h3>Escalabilidad</h3>
+                <p>Gracias a los más de 20 años de experiencia en "Billing" nuestra solución se encuentra 100% preparada para dar respuesta tanto al suscriptor residencial como a grandes clientes.</p>
+                <br>
+                <h3>Interfaces</h3>
+                <p>Permite el desarrollo de interfaces con otros sistemas de la compañía.</p>
+                <br>
+            </div>
+            <div class="col-lg-12">
+                <br>
+                <h1>Además le ofrecemos...</h1>
                 <hr>
             </div>
             <div class="col-lg-4">
@@ -350,6 +356,58 @@
             <!-- end of col -->
         </div>
     </div>
+
+    <!-- Efacturas Lightbox -->
+    <div id="efacturas-lightbox" class="lightbox-basic zoom-anim-dialog mfp-hide">
+        <div class="row">
+            <button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
+            <div class="col-lg-12">
+
+            </div>
+            <!-- end of col -->
+        </div>
+        <!-- end of row -->
+    </div>
+    <!-- end of Efacturas Lightbox -->
+
+    <!-- ReduccionCostos Lightbox -->
+    <div id="reduccioncostos-lightbox" class="lightbox-basic zoom-anim-dialog mfp-hide">
+        <div class="row">
+            <button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
+            <div class="col-lg-12">
+
+            </div>
+            <!-- end of col -->
+        </div>
+        <!-- end of row -->
+    </div>
+    <!-- end of ReduccionCostos Lightbox -->
+
+    <!-- FacturacionCorp Lightbox -->
+    <div id="facturacioncorp-lightbox" class="lightbox-basic zoom-anim-dialog mfp-hide">
+        <div class="row">
+            <button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
+            <div class="col-lg-12">
+
+            </div>
+            <!-- end of col -->
+        </div>
+        <!-- end of row -->
+    </div>
+    <!-- end of FacturacionCorp Lightbox -->
+
+    <!-- FacturacionLote Lightbox -->
+    <div id="facturacionlote-lightbox" class="lightbox-basic zoom-anim-dialog mfp-hide">
+        <div class="row">
+            <button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
+            <div class="col-lg-12">
+
+            </div>
+            <!-- end of col -->
+        </div>
+        <!-- end of row -->
+    </div>
+    <!-- end of FacturacionLote Lightbox -->
 
     <!-- Footer -->
     <div class="footer ">
